...
  static const kAggregationId = 0;
  static const kDrillId = 1;

  static const _aggOptions = {
    AggregationLevel.DAILY: _TimeWindowOption(AggregationLevel.DAILY, 'Daily'),
    AggregationLevel.WEEKLY:
        _TimeWindowOption(AggregationLevel.WEEKLY, 'Weekly'),
    AggregationLevel.MONTHLY:
        _TimeWindowOption(AggregationLevel.MONTHLY, 'Monthly'),
  };

  DrillData drillData;
  AggregationLevel aggregationLevel;
...
                allowAll: true,
                shrinkWrap: true,
                primaryScroll: false)));
  }

  Widget _drillHeader(BuildContext context, bool isExpanded) {
    String title = 'All Drills';
    Text subtitle;
    if (drillData != null) {
      title = drillData.type;
      subtitle = Text(drillData.name);
    }
    return ListTile(title: Text(title), subtitle: subtitle);
...
