...
      accuracy = reps;
      log = reps;
    }
    final tabs = [
      _MyTab(tab: Tab(text: 'Reps'), child: reps),
      _MyTab(
          tab: Tab(key: Key(Keys.accuracyTabKey), text: 'Accuracy'),
          child: accuracy),
      _MyTab(tab: Tab(text: 'Log'), child: log),
    ];
    final tabBar = TabBar(
      tabs: tabs.map((e) => e.tab).toList(),
      physics: NeverScrollableScrollPhysics(),
    );
    final tabBarView = Expanded(
...
